--- a/_posts/2021-01-15-DroneCI.md
+++ b/_posts/2021-01-15-DroneCI.md
@@ -179,13 +179,13 @@ Versions of [clang](https://clang.llvm.org/) ranging from 3.3 to 11 are targeted
 
 Some .travis.yml files have a "matrix" section. Others have "jobs". Some .travis files place all the logic in one main "install" script. Others refer to a variety of script sections including "install", "script", "before_install", "before_script", "after_success", which may or may not be shared between the 20 jobs contained in the file. Some job in travis were moving (with the mv command) their source directory, which is baffling and not usually permitted in Jenkins or Drone.  This must be converted to a copy command instead. "travis_wait" and "travis_retry" must be deleted, they are travis-specific.  Many travis variables such as TRAVIS_OS_NAME or TRAVIS_BRANCH need to be set and/or replaced in the resulting scripts. Environment variables in the travis file might be presented as a list, or a string, without quotes, or with single quotes, or double quotes, or single quotes embedded in double quotes, or double quotes embedded in single quotes, or missing entirely and included as a global env section at the top of the file.  The CXX variable, which determines the compiler used by boost build, isn't always apparent and could be derived from a variety of sources, including the COMPILER variable or the list of packages. The list of these types of conversion fixes goes on and on, you can see them in the droneconverter program.  
 
-Apple Macs Developer Tools depends on Xcode, with an array of possible Xcode version numbers from 6 to 12, and counting.  Catalina only runs 10 and above. High Sierra will run 7-9. None of these will operating without accepting the license agreement, however the license agreement might reset if switching to a newer version of Xcode. The presence of "Command Line Tools" seems to break some builds during testing, however everything works if "Command Line Tools" is missing and the build directly accesses Xcode in the /Applications/Xcode-11.7.app/Contents/Developer directory. On the other hand, the package manager "brew" needs "Command Line Tools" (on High Sierra) or it can't install packages. A solution which appears to be sufficiently effective is to “mv CommandLineTools CommandLineTools.bck”, or the reverse, when needed.
+Apple Macs Developer Tools depends on Xcode, with an array of possible Xcode version numbers from 6 to 12, and counting.  Catalina only runs 10 and above. High Sierra will run 7-9. None of these will operate without accepting the license agreement, however the license agreement might reset if switching to a newer version of Xcode. The presence of "Command Line Tools" seems to break some builds during testing, however everything works if "Command Line Tools" is missing and the build directly accesses Xcode in the /Applications/Xcode-11.7.app/Contents/Developer directory. On the other hand, the package manager "brew" needs "Command Line Tools" (on High Sierra) or it can't install packages. A solution which appears to be sufficiently effective is to “mv CommandLineTools CommandLineTools.bck”, or the reverse, when needed.
 
 Drone will not start on a Mac during reboot unless the Drone user has a window console sessions running too. So, Apple is not an ideal command-line-only remote server environment.  
 
 # Drone Deployments  
 
-Pull request with the new drone configs were rolled out to all those boost repositories with 100% travis build success rate and 100% drone build success rate, which accounts for about half of boost libraries. The other half of boost libraries are either missing a .travis.yml file, or they have a couple of travis/drone jobs which are failing. These should be addressed individually, even if only to post details about it in the pull requests. Ideally, attention should be focused on these failing tests, one by one, until the jobs attain a 100% build success rate and the badge displays green instead of red.  The [long tail](https://en.wikipedia.org/wiki/Long_tail) distribution of edge-cases require individual attention and rewritten tests.  
+Pull requests with the new drone configs were rolled out to all those boost repositories with 100% travis build success rate and 100% drone build success rate, which accounts for about half of boost libraries. The other half of boost libraries are either missing a .travis.yml file, or they have a couple of travis/drone jobs which are failing. These should be addressed individually, even if only to post details about it in the pull requests. Ideally, attention should be focused on these failing tests, one by one, until the jobs attain a 100% build success rate and the badge displays green instead of red.  The [long tail](https://en.wikipedia.org/wiki/Long_tail) distribution of edge-cases require individual attention and rewritten tests.  
 
 # Github Actions  
 
